yacc.output
Terminals unused in grammar

   '+'
   '-'
   '/'
   ORDER
   BY
   ASC
   DESC
   INDEX
   SHOW
   TABLES


Grammar

    0 $accept: sql_start $end

    1 sql_start: sql_func
    2          | EXIT

    3 sql_func: ';'
    4         | table_def
    5         | table_drop
    6         | insert_stat
    7         | delete_stat
    8         | select_stat

    9 table_def: CREATE TABLE table '(' table_attr_list ')' ';'

   10 table: NAME

   11 table_attr_list: column_def
   12                | table_attr_list ',' column_def

   13 column_def: column data_type

   14 column: NAME

   15 data_type: CHARACTER '(' NUMBER ')'
   16          | INTEGER
   17          | DATE
   18          | VARCHAR '(' NUMBER ')'
   19          | FLOAT '(' NUMBER ')'

   20 table_drop: DROP TABLE table ';'

   21 insert_stat: INSERT INTO table VALUES '(' insert_list ')' ';'

   22 insert_list: NUMBER
   23            | STRING
   24            | insert_list ',' NUMBER
   25            | insert_list ',' STRING

   26 delete_stat: DELETE FROM table where_clause ';'

   27 select_stat: select_seg ';'

   28 select_seg: select_clause FROM fromlist where_clause

   29 select_clause: selectbegin unique sellist
   30              | selectbegin unique '*'

   31 selectbegin: SELECT

   32 unique: %empty
   33       | ALL
   34       | DISTINCT
   35       | UNIQUE

   36 sellist: sel_column
   37        | sellist ',' sel_column

   38 sel_column: NAME
   39           | NAME '.' NAME

   40 fromlist: sel_table
   41         | fromlist ',' sel_table

   42 sel_table: NAME
   43          | '(' select_seg ')'
   44          | '(' select_seg ')' NAME

   45 where_clause: %empty
   46             | WHERE condition

   47 condition: expr
   48          | condition AND expr

   49 expr: NAME '.' NAME COMPARISION NAME '.' NAME
   50     | NAME COMPARISION NUMBER
   51     | NAME COMPARISION STRING
   52     | NAME '.' NAME COMPARISION NUMBER
   53     | NAME '.' NAME COMPARISION STRING


Terminals, with rules where they appear

$end (0) 0
'(' (40) 9 15 18 19 21 43 44
')' (41) 9 15 18 19 21 43 44
'*' (42) 30
'+' (43)
',' (44) 12 24 25 37 41
'-' (45)
'.' (46) 39 49 52 53
'/' (47)
';' (59) 3 9 20 21 26 27
error (256)
NAME (258) 10 14 38 39 42 44 49 50 51 52 53
STRING (259) 23 25 51 53
NUMBER (260) 15 18 19 22 24 50 52
COMPARISION (261) 49 50 51 52 53
AND (262) 48
SELECT (263) 31
FROM (264) 26 28
WHERE (265) 46
ORDER (266)
BY (267)
ASC (268)
DESC (269)
ALL (270) 33
UNIQUE (271) 35
DISTINCT (272) 34
CREATE (273) 9
TABLE (274) 9 20
DROP (275) 20
INDEX (276)
INSERT (277) 21
INTO (278) 21
VALUES (279) 21
DELETE (280) 26
CHARACTER (281) 15
INTEGER (282) 16
DATE (283) 17
FLOAT (284) 19
VARCHAR (285) 18
SHOW (286)
TABLES (287)
EXIT (288) 2


Nonterminals, with rules where they appear

$accept (43)
    on left: 0
sql_start (44)
    on left: 1 2, on right: 0
sql_func (45)
    on left: 3 4 5 6 7 8, on right: 1
table_def (46)
    on left: 9, on right: 4
table (47)
    on left: 10, on right: 9 20 21 26
table_attr_list (48)
    on left: 11 12, on right: 9 12
column_def (49)
    on left: 13, on right: 11 12
column (50)
    on left: 14, on right: 13
data_type (51)
    on left: 15 16 17 18 19, on right: 13
table_drop (52)
    on left: 20, on right: 5
insert_stat (53)
    on left: 21, on right: 6
insert_list (54)
    on left: 22 23 24 25, on right: 21 24 25
delete_stat (55)
    on left: 26, on right: 7
select_stat (56)
    on left: 27, on right: 8
select_seg (57)
    on left: 28, on right: 27 43 44
select_clause (58)
    on left: 29 30, on right: 28
selectbegin (59)
    on left: 31, on right: 29 30
unique (60)
    on left: 32 33 34 35, on right: 29 30
sellist (61)
    on left: 36 37, on right: 29 37
sel_column (62)
    on left: 38 39, on right: 36 37
fromlist (63)
    on left: 40 41, on right: 28 41
sel_table (64)
    on left: 42 43 44, on right: 40 41
where_clause (65)
    on left: 45 46, on right: 26 28
condition (66)
    on left: 47 48, on right: 46 48
expr (67)
    on left: 49 50 51 52 53, on right: 47 48


State 0

    0 $accept: . sql_start $end

    SELECT  shift, and go to state 1
    CREATE  shift, and go to state 2
    DROP    shift, and go to state 3
    INSERT  shift, and go to state 4
    DELETE  shift, and go to state 5
    EXIT    shift, and go to state 6
    ';'     shift, and go to state 7

    sql_start      go to state 8
    sql_func       go to state 9
    table_def      go to state 10
    table_drop     go to state 11
    insert_stat    go to state 12
    delete_stat    go to state 13
    select_stat    go to state 14
    select_seg     go to state 15
    select_clause  go to state 16
    selectbegin    go to state 17


State 1

   31 selectbegin: SELECT .

    $default  reduce using rule 31 (selectbegin)


State 2

    9 table_def: CREATE . TABLE table '(' table_attr_list ')' ';'

    TABLE  shift, and go to state 18


State 3

   20 table_drop: DROP . TABLE table ';'

    TABLE  shift, and go to state 19


State 4

   21 insert_stat: INSERT . INTO table VALUES '(' insert_list ')' ';'

    INTO  shift, and go to state 20


State 5

   26 delete_stat: DELETE . FROM table where_clause ';'

    FROM  shift, and go to state 21


State 6

    2 sql_start: EXIT .

    $default  reduce using rule 2 (sql_start)


State 7

    3 sql_func: ';' .

    $default  reduce using rule 3 (sql_func)


State 8

    0 $accept: sql_start . $end

    $end  shift, and go to state 22


State 9

    1 sql_start: sql_func .

    $default  reduce using rule 1 (sql_start)


State 10

    4 sql_func: table_def .

    $default  reduce using rule 4 (sql_func)


State 11

    5 sql_func: table_drop .

    $default  reduce using rule 5 (sql_func)


State 12

    6 sql_func: insert_stat .

    $default  reduce using rule 6 (sql_func)


State 13

    7 sql_func: delete_stat .

    $default  reduce using rule 7 (sql_func)


State 14

    8 sql_func: select_stat .

    $default  reduce using rule 8 (sql_func)


State 15

   27 select_stat: select_seg . ';'

    ';'  shift, and go to state 23


State 16

   28 select_seg: select_clause . FROM fromlist where_clause

    FROM  shift, and go to state 24


State 17

   29 select_clause: selectbegin . unique sellist
   30              | selectbegin . unique '*'

    ALL       shift, and go to state 25
    UNIQUE    shift, and go to state 26
    DISTINCT  shift, and go to state 27

    $default  reduce using rule 32 (unique)

    unique  go to state 28


State 18

    9 table_def: CREATE TABLE . table '(' table_attr_list ')' ';'

    NAME  shift, and go to state 29

    table  go to state 30


State 19

   20 table_drop: DROP TABLE . table ';'

    NAME  shift, and go to state 29

    table  go to state 31


State 20

   21 insert_stat: INSERT INTO . table VALUES '(' insert_list ')' ';'

    NAME  shift, and go to state 29

    table  go to state 32


State 21

   26 delete_stat: DELETE FROM . table where_clause ';'

    NAME  shift, and go to state 29

    table  go to state 33


State 22

    0 $accept: sql_start $end .

    $default  accept


State 23

   27 select_stat: select_seg ';' .

    $default  reduce using rule 27 (select_stat)


State 24

   28 select_seg: select_clause FROM . fromlist where_clause

    NAME  shift, and go to state 34
    '('   shift, and go to state 35

    fromlist   go to state 36
    sel_table  go to state 37


State 25

   33 unique: ALL .

    $default  reduce using rule 33 (unique)


State 26

   35 unique: UNIQUE .

    $default  reduce using rule 35 (unique)


State 27

   34 unique: DISTINCT .

    $default  reduce using rule 34 (unique)


State 28

   29 select_clause: selectbegin unique . sellist
   30              | selectbegin unique . '*'

    NAME  shift, and go to state 38
    '*'   shift, and go to state 39

    sellist     go to state 40
    sel_column  go to state 41


State 29

   10 table: NAME .

    $default  reduce using rule 10 (table)


State 30

    9 table_def: CREATE TABLE table . '(' table_attr_list ')' ';'

    '('  shift, and go to state 42


State 31

   20 table_drop: DROP TABLE table . ';'

    ';'  shift, and go to state 43


State 32

   21 insert_stat: INSERT INTO table . VALUES '(' insert_list ')' ';'

    VALUES  shift, and go to state 44


State 33

   26 delete_stat: DELETE FROM table . where_clause ';'

    WHERE  shift, and go to state 45

    $default  reduce using rule 45 (where_clause)

    where_clause  go to state 46


State 34

   42 sel_table: NAME .

    $default  reduce using rule 42 (sel_table)


State 35

   43 sel_table: '(' . select_seg ')'
   44          | '(' . select_seg ')' NAME

    SELECT  shift, and go to state 1

    select_seg     go to state 47
    select_clause  go to state 16
    selectbegin    go to state 17


State 36

   28 select_seg: select_clause FROM fromlist . where_clause
   41 fromlist: fromlist . ',' sel_table

    WHERE  shift, and go to state 45
    ','    shift, and go to state 48

    $default  reduce using rule 45 (where_clause)

    where_clause  go to state 49


State 37

   40 fromlist: sel_table .

    $default  reduce using rule 40 (fromlist)


State 38

   38 sel_column: NAME .
   39           | NAME . '.' NAME

    '.'  shift, and go to state 50

    $default  reduce using rule 38 (sel_column)


State 39

   30 select_clause: selectbegin unique '*' .

    $default  reduce using rule 30 (select_clause)


State 40

   29 select_clause: selectbegin unique sellist .
   37 sellist: sellist . ',' sel_column

    ','  shift, and go to state 51

    $default  reduce using rule 29 (select_clause)


State 41

   36 sellist: sel_column .

    $default  reduce using rule 36 (sellist)


State 42

    9 table_def: CREATE TABLE table '(' . table_attr_list ')' ';'

    NAME  shift, and go to state 52

    table_attr_list  go to state 53
    column_def       go to state 54
    column           go to state 55


State 43

   20 table_drop: DROP TABLE table ';' .

    $default  reduce using rule 20 (table_drop)


State 44

   21 insert_stat: INSERT INTO table VALUES . '(' insert_list ')' ';'

    '('  shift, and go to state 56


State 45

   46 where_clause: WHERE . condition

    NAME  shift, and go to state 57

    condition  go to state 58
    expr       go to state 59


State 46

   26 delete_stat: DELETE FROM table where_clause . ';'

    ';'  shift, and go to state 60


State 47

   43 sel_table: '(' select_seg . ')'
   44          | '(' select_seg . ')' NAME

    ')'  shift, and go to state 61


State 48

   41 fromlist: fromlist ',' . sel_table

    NAME  shift, and go to state 34
    '('   shift, and go to state 35

    sel_table  go to state 62


State 49

   28 select_seg: select_clause FROM fromlist where_clause .

    $default  reduce using rule 28 (select_seg)


State 50

   39 sel_column: NAME '.' . NAME

    NAME  shift, and go to state 63


State 51

   37 sellist: sellist ',' . sel_column

    NAME  shift, and go to state 38

    sel_column  go to state 64


State 52

   14 column: NAME .

    $default  reduce using rule 14 (column)


State 53

    9 table_def: CREATE TABLE table '(' table_attr_list . ')' ';'
   12 table_attr_list: table_attr_list . ',' column_def

    ')'  shift, and go to state 65
    ','  shift, and go to state 66


State 54

   11 table_attr_list: column_def .

    $default  reduce using rule 11 (table_attr_list)


State 55

   13 column_def: column . data_type

    CHARACTER  shift, and go to state 67
    INTEGER    shift, and go to state 68
    DATE       shift, and go to state 69
    FLOAT      shift, and go to state 70
    VARCHAR    shift, and go to state 71

    data_type  go to state 72


State 56

   21 insert_stat: INSERT INTO table VALUES '(' . insert_list ')' ';'

    STRING  shift, and go to state 73
    NUMBER  shift, and go to state 74

    insert_list  go to state 75


State 57

   49 expr: NAME . '.' NAME COMPARISION NAME '.' NAME
   50     | NAME . COMPARISION NUMBER
   51     | NAME . COMPARISION STRING
   52     | NAME . '.' NAME COMPARISION NUMBER
   53     | NAME . '.' NAME COMPARISION STRING

    COMPARISION  shift, and go to state 76
    '.'          shift, and go to state 77


State 58

   46 where_clause: WHERE condition .
   48 condition: condition . AND expr

    AND  shift, and go to state 78

    $default  reduce using rule 46 (where_clause)


State 59

   47 condition: expr .

    $default  reduce using rule 47 (condition)


State 60

   26 delete_stat: DELETE FROM table where_clause ';' .

    $default  reduce using rule 26 (delete_stat)


State 61

   43 sel_table: '(' select_seg ')' .
   44          | '(' select_seg ')' . NAME

    NAME  shift, and go to state 79

    $default  reduce using rule 43 (sel_table)


State 62

   41 fromlist: fromlist ',' sel_table .

    $default  reduce using rule 41 (fromlist)


State 63

   39 sel_column: NAME '.' NAME .

    $default  reduce using rule 39 (sel_column)


State 64

   37 sellist: sellist ',' sel_column .

    $default  reduce using rule 37 (sellist)


State 65

    9 table_def: CREATE TABLE table '(' table_attr_list ')' . ';'

    ';'  shift, and go to state 80


State 66

   12 table_attr_list: table_attr_list ',' . column_def

    NAME  shift, and go to state 52

    column_def  go to state 81
    column      go to state 55


State 67

   15 data_type: CHARACTER . '(' NUMBER ')'

    '('  shift, and go to state 82


State 68

   16 data_type: INTEGER .

    $default  reduce using rule 16 (data_type)


State 69

   17 data_type: DATE .

    $default  reduce using rule 17 (data_type)


State 70

   19 data_type: FLOAT . '(' NUMBER ')'

    '('  shift, and go to state 83


State 71

   18 data_type: VARCHAR . '(' NUMBER ')'

    '('  shift, and go to state 84


State 72

   13 column_def: column data_type .

    $default  reduce using rule 13 (column_def)


State 73

   23 insert_list: STRING .

    $default  reduce using rule 23 (insert_list)


State 74

   22 insert_list: NUMBER .

    $default  reduce using rule 22 (insert_list)


State 75

   21 insert_stat: INSERT INTO table VALUES '(' insert_list . ')' ';'
   24 insert_list: insert_list . ',' NUMBER
   25            | insert_list . ',' STRING

    ')'  shift, and go to state 85
    ','  shift, and go to state 86


State 76

   50 expr: NAME COMPARISION . NUMBER
   51     | NAME COMPARISION . STRING

    STRING  shift, and go to state 87
    NUMBER  shift, and go to state 88


State 77

   49 expr: NAME '.' . NAME COMPARISION NAME '.' NAME
   52     | NAME '.' . NAME COMPARISION NUMBER
   53     | NAME '.' . NAME COMPARISION STRING

    NAME  shift, and go to state 89


State 78

   48 condition: condition AND . expr

    NAME  shift, and go to state 57

    expr  go to state 90


State 79

   44 sel_table: '(' select_seg ')' NAME .

    $default  reduce using rule 44 (sel_table)


State 80

    9 table_def: CREATE TABLE table '(' table_attr_list ')' ';' .

    $default  reduce using rule 9 (table_def)


State 81

   12 table_attr_list: table_attr_list ',' column_def .

    $default  reduce using rule 12 (table_attr_list)


State 82

   15 data_type: CHARACTER '(' . NUMBER ')'

    NUMBER  shift, and go to state 91


State 83

   19 data_type: FLOAT '(' . NUMBER ')'

    NUMBER  shift, and go to state 92


State 84

   18 data_type: VARCHAR '(' . NUMBER ')'

    NUMBER  shift, and go to state 93


State 85

   21 insert_stat: INSERT INTO table VALUES '(' insert_list ')' . ';'

    ';'  shift, and go to state 94


State 86

   24 insert_list: insert_list ',' . NUMBER
   25            | insert_list ',' . STRING

    STRING  shift, and go to state 95
    NUMBER  shift, and go to state 96


State 87

   51 expr: NAME COMPARISION STRING .

    $default  reduce using rule 51 (expr)


State 88

   50 expr: NAME COMPARISION NUMBER .

    $default  reduce using rule 50 (expr)


State 89

   49 expr: NAME '.' NAME . COMPARISION NAME '.' NAME
   52     | NAME '.' NAME . COMPARISION NUMBER
   53     | NAME '.' NAME . COMPARISION STRING

    COMPARISION  shift, and go to state 97


State 90

   48 condition: condition AND expr .

    $default  reduce using rule 48 (condition)


State 91

   15 data_type: CHARACTER '(' NUMBER . ')'

    ')'  shift, and go to state 98


State 92

   19 data_type: FLOAT '(' NUMBER . ')'

    ')'  shift, and go to state 99


State 93

   18 data_type: VARCHAR '(' NUMBER . ')'

    ')'  shift, and go to state 100


State 94

   21 insert_stat: INSERT INTO table VALUES '(' insert_list ')' ';' .

    $default  reduce using rule 21 (insert_stat)


State 95

   25 insert_list: insert_list ',' STRING .

    $default  reduce using rule 25 (insert_list)


State 96

   24 insert_list: insert_list ',' NUMBER .

    $default  reduce using rule 24 (insert_list)


State 97

   49 expr: NAME '.' NAME COMPARISION . NAME '.' NAME
   52     | NAME '.' NAME COMPARISION . NUMBER
   53     | NAME '.' NAME COMPARISION . STRING

    NAME    shift, and go to state 101
    STRING  shift, and go to state 102
    NUMBER  shift, and go to state 103


State 98

   15 data_type: CHARACTER '(' NUMBER ')' .

    $default  reduce using rule 15 (data_type)


State 99

   19 data_type: FLOAT '(' NUMBER ')' .

    $default  reduce using rule 19 (data_type)


State 100

   18 data_type: VARCHAR '(' NUMBER ')' .

    $default  reduce using rule 18 (data_type)


State 101

   49 expr: NAME '.' NAME COMPARISION NAME . '.' NAME

    '.'  shift, and go to state 104


State 102

   53 expr: NAME '.' NAME COMPARISION STRING .

    $default  reduce using rule 53 (expr)


State 103

   52 expr: NAME '.' NAME COMPARISION NUMBER .

    $default  reduce using rule 52 (expr)


State 104

   49 expr: NAME '.' NAME COMPARISION NAME '.' . NAME

    NAME  shift, and go to state 105


State 105

   49 expr: NAME '.' NAME COMPARISION NAME '.' NAME .

    $default  reduce using rule 49 (expr)
